# my-krkrz

./: .gitignore  .projectile  CMakeLists.txt
src/: CMakeLists.txt  krkrz_application.cc  krkrz_application.h  main.cc
src/msg/: MsgIntf.cpp
src/msg/linux/: MsgImpl.cpp  MsgImpl.h  MsgLoad.cpp  MsgLoad.h
src/msg/text/linux/: Pipfile  gentext_linux.py  krkrz.mo  krkrz.po  krkrz.pot  krkrz_zh.po
src/tjs2/: tjsArray.cpp  tjsCommHead.h  tjsConfig.h  tjsDictionary.cpp  tjsError.h  tjsGlobalStringMap.cpp  tjsInterface.h  tjsString.h  tjsTypes.h  tjsVariantString.h
src/tjs2_lib/: tjs2_async_trigger.cc  tjs2_basic_drawdevice.cc  tjs2_basic_drawdevice.h  tjs2_debug.cc  tjs2_font.cc  tjs2_font.h  tjs2_layer.cc  tjs2_layer.h  tjs2_lib.cc  tjs2_lib.h  tjs2_plugins.cc  tjs2_scripts.cc  tjs2_scripts.h  tjs2_storages.cc  tjs2_storages.h  tjs2_system.cc  tjs2_system.h  tjs2_timer.cc  tjs2_video_overlay.cc  tjs2_wave_sound_buffer.cc  tjs2_window.cc  tjs2_window.h
src/tjs2_plugin/: KAGParser.cpp  KAGParser.h  kag_parser.cc  menu_item.cc  tjs2_plugin.h  tjsHashSearch.h
test/: CMakeLists.txt  test.cc
